--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="/stylesheets/profile.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
+    <div class="button" id="log">
+        <button class="btn btn-danger sticky top-4 right-4 w-8"><a href="/logout">Logout</a></button>
+        <button class="btn btn-secondary sticky top-4 right-4 w-8"><a href="/chat">Chat</a></button>
+    </div>
     <div class="container p-0 w-75">
         <div class="cover">
             <div class="profile-pic">
@@ -18,30 +23,32 @@
             </div>
         </div>
         <div class="text-center">
+            <a href="/edit"><i class="fa-solid fa-pencil"></i></a>
             <h1>
                 <%= user.fullname%>
             </h1>
             <p class="subtitle">
-                <%= user.username%>
+                @<%= user.username%>
             </p>
         </div>
         <div class="main">
             <ul class="tabs">
                 <li data-target="intro" class="active">Intro</li>
-                <li data-target="history">Projects</li>
+                <li data-target="project">Projects</li>
                 <li data-target="contact">Contact</li>
                 <li data-target="posts">Upload</li>
-                <li><a href="/chat">Chats</a></li>
-                <li><a href="/logout">Logout</a></li>
             </ul>
             <div id="intro" class="tab-content active">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis odit ducimus qui doloribus
-                    aliquam quo maxime vitae molestiae. A esse aut facilis voluptatum, similique odit. Quaerat
-                    recusandae accusantium corrupti itaque quo omnis totam ullam provident nemo, fugit mollitia
-                    praesentium iste nam? Deserunt possimus molestias quod, consequuntur provident quos similique?
-                    Consectetur!</p>
+                <p>
+                    <%= user.bio%>
+                </p>
             </div>
-            <div id="history" class="tab-content">
+        </div>
+    </div>
+
+    <div class="container p-0 w-75">
+        <div class="row justify-content-center">
+            <div id="project" class="tab-content">
                 <div class="row row-cols-1 row-cols-md-2 g-4 justify-content-center">
                     <% user.projects.forEach(function (project){%>
                         <div class="col">
@@ -99,13 +106,19 @@
             <h5 class="Question">Questions</h5>
             <% user.posts.forEach(function (post){%>
                 <div class="card p-0 mb-2">
-                    <h5 class="card-header"><%=post.postText%></h5>
+                    <h5 class="card-header">
+                        <%=post.postText%>
+                    </h5>
                     <div class="card-body">
-                      <h5 class="card-title"><%=post.question%></h5>
-                      <p class="card-text"><%=post.createdAt%></p>
-                      <a href="/chat/" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">
+                            <%=post.question%>
+                        </h5>
+                        <p class="card-text">
+                            <%=post.createdAt%>
+                        </p>
+                        <a href="/chat/" class="btn btn-primary">Go somewhere</a>
                     </div>
-                  </div>
+                </div>
                 <%})%>
         </div>
     </div>
