--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/stylesheets/profile.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -22,8 +23,8 @@
                 <img src="/images/uploads/<%=user.profile%>" alt="Hero Alom">
             </div>
         </div>
-        <div class="text-center">
-            <a href="/edit"><i class="fa-solid fa-pencil"></i></a>
+        <div class="text-center" >
+            <a href="/edit" id="edit"><i class="ri-pencil-line"></i></a>
             <h1>
                 <%= user.fullname%>
             </h1>
